@@ -1,0 +1,1 @@
+ALTER TABLE `users` CHANGE `preferences` `preferences` longtext;
